--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   path: ^1.8.3
   image_picker: ^1.0.7
   path_provider: ^2.1.2
+  uuid: ^4.0.0
+  intl: ^0.19.0
+  flutter_secure_storage: ^9.0.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
